# SplitSCM

./: .gitmodules  CMakeLists.txt  main.cpp
docs/: Add.sequence.mermaid  Checkout.sequence.mermaid  Classes.mermaid  Commit.sequence.mermaid  FileCycle.state.mermaid
src/components/: Commit.cpp  Commit.h  Repository.h  Tree.cpp  Tree.h
src/core/: Alias.h
src/stores/: CommitHistory.h  Index.cpp  Index.h  ObjectStore.cpp  Pack.cpp  Pack.h  Repository.cpp  Repository.h
src/utils/: Delta.h  DeltaCompressor.cpp  DeltaCompressor.h  DeltaInstruction.h  Hashing.h  ObjectStore.cpp  ObjectStore.h  SHA1.h  Time.h
tests/: DeltaCompressorTest.cpp  IndexTest.cpp  ObjectStoreTest.cpp  PackTest.cpp  TimeTest.cpp  TreeTest.cpp
